Alignment issues

--- a/frontend/src/app/component/header/contactus-dialog.component.css
+++ b/frontend/src/app/component/header/contactus-dialog.component.css
@@ -22,8 +22,8 @@
   background-color: #000;
   position: absolute;
   width: 2px;
-  height: 80%;
-  top: 10px;
+  height: 45%;
+  top: 77px;
   left: 50%;
   display: block;
 }
